Fix: Correct Config File Location and Resource Management
    Enhancement: Implement Path-Based Rate Limiting

    Fix: Remove Unnecessary Temporaries and Improve Logging

    Refactor: Use Try-with-Resources and Switch Expressions